--- a/less/sections.less
+++ b/less/sections.less
@@ -81,15 +81,15 @@ header {
 }
 
 // -------------------------------------------------------------------------
-// MACBOOK SECTION
+// About SECTION
 // -------------------------------------------------------------------------
 
-#macbook {
+#About {
     text-align: center;
     padding: 4em 0 0 0;
 }
 
-#macbook img {
+#About img {
     margin: 5em 0 0 0;
     width: 80%;
 }
