--- a/less/mediaqueries.less
+++ b/less/mediaqueries.less
@@ -20,11 +20,11 @@
         margin: 0 0 2.5em 0;
     }
     
-    #macbook {
+    #About {
         padding: 2.5em 0 0 0;
     }
     
-    #macbook img {
+    #About img {
         margin: 3em 0 0 0;
     }
     
