--- a/less/sections.less
+++ b/less/sections.less
@@ -131,24 +131,6 @@ header {
 }
 
 // -------------------------------------------------------------------------
-// THREE IMAGES SECTION
-// -------------------------------------------------------------------------
-
-#three-images {
-    padding: 4em 0 6em 0;
-}
-
-.img-circle-div {
-    .column(4);
-    text-align: center;
-}
-
-#three-images img {
-    border-radius: 50%;
-    box-shadow: 0 1px 2px rgba(0,0,0,.25);
-}
-
-// -------------------------------------------------------------------------
 // SLIDER SECTION
 // -------------------------------------------------------------------------
 
@@ -319,16 +301,8 @@ footer {
     height: 25px;
 }
 
-.social-boat {
-    float: left;
-}
-
-.social-boat div {
-    display: inline-block;
-}
-
 #footer-text {
-    float: right;
+    float: center;
 }
 
 #footer-text p {
