--- a/less/sections.less
+++ b/less/sections.less
@@ -46,10 +46,11 @@
 
 header {
     text-align: center;
+    overflow-x: hidden;
 }
 
 .body-header {
-    overflow-x: hidden;
+    margin:0 0 4em 0;
 }
 
 // -------------------------------------------------------------------------
